--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"
+	integrity="sha512-7oYXeK0OxTFxndh0erL8FsjGvrl2VMDor6fVqzlLGfwOQQqTbYsGPv4ZZ15QHfSk80doyaM0ZJdvkyDcVO7KFA=="
 	crossorigin="anonymous"></script>
 <script src="classCtrl.js"></script>
 <title>Smart Classroom</title>
 </head>
-<body>
+<body ng-app="smartClass" ng-controller="classCtrl">
 	<center>
 		<h1>Teacher Portal</h1>
 		<hr />
-		<h3 id="notifications"></h3>
+		<h3>{{notifications}}</h3>
 		Enter Note Title:<br />
-		<textarea type="text" name="title" id="title" rows="5" cols="60"></textarea>
+		<textarea type="text" ng-model="title" rows="5" cols="60"></textarea>
 		<br /> <br /> Enter Note Description:<br />
-		<textarea name="body" id="body" rows="20" cols="60"></textarea>
+		<textarea name="body" ng-model="body" rows="20" cols="60"></textarea>
 		<br /> <br />
-		<button type="button" id="send" value="Submit" />
+		<button type="button" id="send" ng-click="send()" value="Submit" />
 		Submit
 		</button>
 		<br />
