--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -2,22 +2,30 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"
+	integrity="sha512-7oYXeK0OxTFxndh0erL8FsjGvrl2VMDor6fVqzlLGfwOQQqTbYsGPv4ZZ15QHfSk80doyaM0ZJdvkyDcVO7KFA=="
 	crossorigin="anonymous"></script>
 <script src="view.js"></script>
 <title>Notes View</title>
 </head>
-<body>
+<body ng-app="smartClass" ng-controller="classCtrl">
 	<center>
 		<h1>Note View</h1>
 		<hr />
-		<h3 id="notifications"></h3>
+		<h3>{{notifications}}</h3>
 		<hr />
-		<h4>Your Notes</h6>
-		<div id="nList"></div>
-		<hr />
-		<a href="/logout">Logout</a>
+		<h4>
+			Your Notes
+			</h6>
+			<div>
+				<ul style="display: inline-block;" ng-repeat="listItem in nList">
+					<li>Title: {{listItem.title}}</li>
+					<li>Body: {{listItem.body}}</li>
+				</ul>
+			</div>
+			<hr />
+			<a href="/logout">Logout</a>
 	</center>
 </body>
 </html>
